http://bugzilla.zimbra.com/show_bug.cgi?id=1995 bug: 1995 checkpoint, reorganize tables on the tabs, group summary tables into a grouper block, put messages table underneath the summary tables, create temporary data for searching message queue, fix some IE layout issues in mail q view

--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -570,3 +570,11 @@ P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON {
 .que_table {
 	width:100%;
 }
+
+.container_table {
+	cell-spacing:10px;
+}
+.container {
+	margin-left:2%;
+	margin-right:2%;
+}
